# Registry-Manager

./: .gitignore  Dockerfile  FRONTEND_README.md  README.md  docker-compose.yaml  env.example  index.html  main.py  nginx.conf  package.json  pyproject.toml  vite.config.js
app/: __init__.py  db.py  main.py
app/api/: __init__.py  auth.py  images.py  pages.py  permissions.py  registry_auth.py  registry_proxy.py  repositories.py  users.py
app/api/routes/: __init__.py  auth.py  dashboard.py  health.py  images.py  logs.py  registry_proxy.py  repositories.py
app/core/: __init__.py  config.py  database.py  security.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  operation_log.py  permission.py  repository.py  stats.py  user.py
app/schemas/: __init__.py  auth.py  image.py  permission.py  repository.py  user.py
app/services/: __init__.py  auth.py  permission.py  registry.py  registry_auth.py  registry_client.py  user_service.py
app/static/css/: style.css
app/static/js/: api.js  auth.js
app/templates/: base.html  dashboard.html  login.html  permissions.html  repositories.html  repository_detail.html  users.html
app/utils/: init_data.py
src/: App.vue  main.js
src/router/: index.js
src/stores/: auth.js  ui.js
src/utils/: api.js
src/views/: Dashboard.vue  Login.vue  Main.vue  Operations.vue  Repositories.vue  Settings.vue
